[package]
name = "async-rustbus"
version = "0.2.0"
authors = ["Curtis Maves <curtis@maves.io>"]
edition = "2021"
license = "MIT"
description = "An asynchronous implementation of the DBus protocol based on rustbus"
homepage = "https://github.com/cmaves/async-rustbus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rustbus = "0.19"
async-channel = "2"
async-io = "2"
async-net = "2"
arrayvec = "0.7"
xml-rs = "0.8"

[dependencies.futures-util]
version = "0.3"
features = ["io"]

[dev-dependencies.rand]
version = "0.8"
features = ["small_rng"]
